Finished the festival section + fix the video overflow for tablet

--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -22,7 +22,7 @@
     video{
         display: block;
         width: auto;
-        @include m.tablet{
+        @include m.desktop{
             width: 100%;
         }
 
